apps/media/nzbhydra2/networkpolicies/ingress-nzbhydra2.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-nzbhydra2
  namespace: media
spec:
  selector: app == 'nzbhydra2'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 5076
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app == 'sonarr' ||
          app == 'radarr'
      destination:
        ports:
          - 5076
