apps/media/nzbhydra2/networkpolicies/nzbhydra2-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-traefik-nzbhydra2
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'media'
        selector: app == 'nzbhydra2'
        ports:
          - 5076
