apps/media/nzbhydra2/networkpolicies/traefik-egress-nzbhydra2.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-nzbhydra2
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app: nzbhydra2
            namespace: media
      toPorts:
        - ports:
            - port: "5076"
